fix(hero): solves firefox overflow issue

--- a/nuxt/src/assets/scss/components/_hero.scss
+++ b/nuxt/src/assets/scss/components/_hero.scss
@@ -11,51 +11,6 @@
   background: var(--hero-background-color);
   color: var(--hero-copy-color);
   position: relative;
-  overflow-x: clip;
-
-  &.hero--shape-mobile-order {
-    .hero__background-shape {
-      display: none;
-
-      @include media-breakpoint-up(lg) {
-        display: flex;
-      }
-    }
-
-    @include media-breakpoint-down(lg) {
-      .hero__intro-col {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-      }
-
-      .hero__overline {
-        order: 1;
-      }
-
-      .hero__headline {
-        order: 2;
-      }
-
-      .hero__subline {
-        order: 3;
-
-        &.hero__subline::before {
-          display: none;
-        }
-      }
-
-      .hero__cta-list {
-        order: 4;
-      }
-    }
-
-    @include media-breakpoint-up(lg) {
-      .hero__background-shape-wrapper.hero__background-shape-wrapper {
-        display: none;
-      }
-    }
-  }
 
   &.is-light {
     --hero-copy-color: var(--color-copy-light);
@@ -405,24 +360,21 @@
   @include z-index;
 
   max-height: unquote('min(23vw, 30%)');
-
   grid-area: intro-right / content-right;
-  overflow-x: clip;
+
+  &.hero__background-shape--overflow {
+    overflow-x: clip;
+  }
 
   &:not(.is--mobile) {
     display: flex;
   }
 
-  &[style] {
-    > * {
-      transform: translateY(var(--hero-shape-offset-y)) translateX(var(--hero-shape-offset-x));
-      position: relative;
-    }
-  }
-
   > * {
     object-fit: contain;
     object-position: right;
+    position: relative;
+    transform: translateY(var(--hero-shape-offset-y)) translateX(var(--hero-shape-offset-x));
 
     &.lottie {
       display: inline-flex;
@@ -445,20 +397,15 @@
 }
 
 .hero__pattern {
-  position: absolute;
-  right: 0;
-
-  @include media-breakpoint-up(lg) {
-    @include z-index;
-
-    top: 50%;
-    transform: translateY(-50%);
-  }
+  @include z-index;
 }
 
-.hero__background-shape {
+.hero__background-shape,
+.hero__pattern {
   position: absolute;
   right: 0;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 .hero__container {
@@ -469,14 +416,6 @@
 
 .hero__cta-list {
   padding-top: spacing(6);
-
-  @include media-breakpoint-down(md) {
-    width: 100%;
-
-    .cta-list__item {
-      width: 100%;
-    }
-  }
 }
 
 .hero__background-shape-wrapper {
@@ -504,29 +443,8 @@
   display: flex;
   justify-content: center;
 
-  &[style] {
-    position: relative;
-    left: calc((100vw - 100%) / 2);
-
-    &[style*='order: 5'],
-    &[style*='order: 6'],
-    &[style*='order: 7'],
-    &[style*='order: 8'],
-    &[style*='order: 9'] {
-      margin-top: spacing(8);
-    }
-
-    &:not([style*='order: 5']):not([style*='order: 6']):not([style*='order: 7']):not([style*='order: 8']):not(
-        [style*='order: 9']
-      ) {
-      margin: spacing(8) 0;
-    }
-  }
-
-  &:not([style]) {
-    > * {
-      margin: spacing($size: 8, $negative: true) 0;
-    }
+  > * {
+    margin: spacing($size: 8, $negative: true) 0;
   }
 
   @include media-breakpoint-up(lg) {
